# AudioVisualizer

./: CMakeLists.txt
include/: AudioVisualizer.h  Music.h  MusicPlayer.h
lib/: SDL2_test.lib  SDL2d.lib  SDL2main.lib  SDL2maind.lib
src/: AudioVisualizer.cpp  Music.cpp  MusicPlayer.cpp
